# digital_vault

./: .gitignore  CONTEXT.md  README.md  WARP.md  chat.py  clustering.py  config.py  digital_vault.py  embedding.py  extraction.py  pipeline.py  pyproject.toml  records.py  requirements.txt  vault.py
