[project]
name = "digital-vault"
version = "0.1.0"
description = "RAG-powered Q&A and search for personal documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "PyPDF2>=3.0.1",
    "python-docx>=0.8.11",
    "numpy>=1.21.0,<2.0.0",
    "torch>=1.11.0",
]
